tests/src/frontend/typechecking/invalid/superfluous_return2.sk
fun main(): void {
  if (true) return void
}
